--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     // TODO: 1 - make it such that if any table cell is clicked, the onClick function below is executed
     const table = document.querySelector('table');
     table.addEventListener('click', function(ev) {
-      if (ev.target.tagName === 'td'){
+      if (ev.target.tagName === 'TD'){
         onClick(ev);
       }
     });
